feat: add buy sell describe

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -816,5 +816,7 @@
   "rampOnOff.resultRampOnOff.congrats": "Congrats🎉 Your ADA will come in a few minute",
   "rampOnOff.resultRampOnOff.ADAmountYouGet": "ADA amount you get",
   "rampOnOff.resultRampOnOff.fiatAmountYouGet": "Fiat amount you sell",
-  "rampOnOff.resultRampOnOff.goToTransactions": "GO TO TRANSACTIONS"
+  "rampOnOff.resultRampOnOff.goToTransactions": "GO TO TRANSACTIONS",
+  "rampOnOff.resultRampOnOff.buySellADATransaction": "Buy ADA/Sell transaction",
+  "rampOnOff.resultRampOnOff.descriptionBuySellADATransaction": "Normally the Buy ADA/Sell transaction takes 3-5 of minutes for the order to be fulfilled. However, there are instances where the order cannot be fulfilled instantly because the compliance team can be doing a manual verification of the KYC docs or any other issues."
 }
